objects/EUR_CRM_Stock_Deal_Mechanic__c.object
<CustomObject>
    <description>PRUK Data Model</description>
    <fields>
        <fullName>EUR_CRM_Bottles_per_Case_BQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bottles per Case BQ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>Stock_Deal_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Date_Effective__c</fullName>
        <label>Date Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Date_Expiry__c</fullName>
        <label>Date Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Liquid_per_Bottle_litre__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Liquid per Bottle (litre)</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Litres_per_Case__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Litres per Case</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Qty_Buy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty. (Buy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Qty_Free__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty. (Free)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RTM_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RTM Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RTM_Supplier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RTM (Supplier Account)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Stock Deal Mechanics</relationshipLabel>
        <relationshipName>Stock_Deal_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Deal_Name__c</fullName>
        <label>Stock Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Deal_Retro_Rate__c</fullName>
        <formula>EUR_CRM_Litres_per_Case__c /  EUR_CRM_Liquid_per_Bottle_litre__c /  EUR_CRM_Bottles_per_Case_BQ__c /  EUR_CRM_Qty_Buy__c *  EUR_CRM_Qty_Free__c *  EUR_CRM_RTM_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Deal Retro Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Stock Deal Mechanic (EU)</label>
    <listViews>
        <fullName>All_ZA_Stock_Deal_Mechanic</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Stock_Deal_Name__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Stock_Deal_Mechanic__c.EUR_ZA_Stock_Deal_Mechanic</value>
        </filters>
        <label>All ZA Stock Deal Mechanic</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Stock_Deal_Mechanics</fullName>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Stock_Deal_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Qty_Buy__c</columns>
        <columns>EUR_CRM_Qty_Free__c</columns>
        <columns>EUR_CRM_Bottles_per_Case_BQ__c</columns>
        <columns>EUR_CRM_Liquid_per_Bottle_litre__c</columns>
        <columns>EUR_CRM_Litres_per_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Stock_Deal_Mechanic__c.EUR_ZA_Stock_Deal_Mechanic</value>
        </filters>
        <label>All ZA Stock Deal Mechanics</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SDM-{00000000}</displayFormat>
        <label>Stock Deal Mechanic No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Deal Mechanic (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_GB_Stock_Deal_Mechanic</fullName>
        <active>true</active>
        <label>GB Stock Deal Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Stock_Deal_Mechanic</fullName>
        <active>true</active>
        <label>EUR ZA Stock Deal Mechanic</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Decimals_in_contracts</fullName>
        <active>true</active>
        <description>Only integer numbers can be used in South Africa contracts</description>
        <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;EUR_ZA_Stock_Deal_Mechanic&apos;
,FLOOR(EUR_CRM_Bottles_per_Case_BQ__c)!=  EUR_CRM_Bottles_per_Case_BQ__c)</errorConditionFormula>
        <errorDisplayField>EUR_CRM_Bottles_per_Case_BQ__c</errorDisplayField>
        <errorMessage>Please input integer number.</errorMessage>
    </validationRules>
</CustomObject>